# STCg12

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  mean.asm  mode.asm
docs/: ProjectReportFormat.docx  design_details.txt  grp12_statistical_calculator_8086.docx  grp12_statistical_calculator_8086_v3.docx
src/: pseudocode.txt
src/8086_isa/: quicksort.asm
src/8086_isa/docs/: 8086_ISA_standard.md
src/c/: stcg12.c
src/x86-16/: SD.asm  mean.asm  median.asm  mode.asm  qsort.asm  stcg12.asm  utils.asm
src/x86-16/docs/: x86-16_standard.md
